<resources>
    <string name="app_name">全向移动小车</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="strInfo">请输入IP地址和端口</string>
    <string name="strBackWard">后退</string>
    <string name="strTurnLeft">左转</string>
    <string name="strStop">停止</string>
    <string name="strForWard">前进</string>
    <string name="strTurnRight">右转</string>
    <string name="strServod">转动摄像头</string>

    <string name="strGPS">GPS坐标：</string>
    <string name="menuDesignAuthor">Design by CycloneBoy</string>
    <string name="action_video_settings">视频显示</string>


    <!-- 添加 顺时针、逆时针功能按钮 2017-12-11 -->
    <string name="strTurnClockwise">顺时针</string>
    <string name="strTurnAntiClockwise">逆时针</string>
    <string name="strCalibrationDirection">校准</string>
    <string name="strOtherCmd">其他</string>

    <!-- 添加 发送GPS按钮 和显示ROBOT数据  2017-12-31 -->
    <string name="strRobot">机器人</string>

    <string name="title_activity_video_show">实时视频监控</string>
    <string name="dummy_button">测试按钮</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
