<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#0099cc"
             tools:context="com.cycloneboy.udpdemo.VideoShow">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <SurfaceView
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/editIP" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="视频地址:"/>

            <EditText
                    android:id="@+id/editIP"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="192.168.2.231:8080"
                    android:textColor="@android:color/black"
                    android:hint="请输网址以及端口号"/>
            <Button
                    android:id="@+id/buttonOpenUrl"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="确认" />
        <Button
                android:id="@+id/buttonSaveImage"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="截图" />


    </LinearLayout>

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp">

        <Button
                android:id="@+id/btnTurnClockwise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnForward"
                android:layout_toLeftOf="@+id/btnForward"
                android:text="@string/strTurnClockwise"/>

        <Button
                android:id="@+id/btnForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:text="@string/strForWard"/>

        <Button
                android:id="@+id/btnTurnAntiClockwise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnForward"
                android:layout_toRightOf="@+id/btnForward"
                android:text="@string/strTurnAntiClockwise"/>


        <Button
                android:id="@+id/btnTurnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnStop"
                android:layout_alignBottom="@+id/btnStop"
                android:layout_toLeftOf="@+id/btnStop"
                android:text="@string/strTurnLeft" />

        <Button
                android:id="@+id/btnTurnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnStop"
                android:layout_alignBottom="@+id/btnStop"
                android:layout_toRightOf="@+id/btnStop"
                android:text="@string/strTurnRight" />

        <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btnForward"
                android:layout_below="@+id/btnForward"
                android:text="@string/strStop"/>

        <Button
                android:id="@+id/btnBackward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btnStop"
                android:layout_below="@+id/btnStop"
                android:text="@string/strBackWard"/>

        <Button
                android:id="@+id/btnCalibrationDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnBackward"
                android:layout_toLeftOf="@+id/btnBackward"
                android:text="@string/strCalibrationDirection"/>

        <Button
                android:id="@+id/btnOtherCmd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnBackward"
                android:layout_toRightOf="@+id/btnForward"
                android:text="@string/strOtherCmd"/>

    </RelativeLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
                      style="?metaButtonBarStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom|center_horizontal"
                      android:background="@color/black_overlay"
                      android:orientation="horizontal"
                      tools:ignore="UselessParent">

            <Button android:id="@+id/dummy_button"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dummy_button"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
