<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/wali1"
        tools:context="com.cycloneboy.udpdemo.MainActivity">

    <TextView
            android:id="@+id/tvIpInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="本机IP地址"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/editTextIP"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="192.168.1.102"
                android:hint="请输IP地址"/>
        <EditText
                android:id="@+id/editTextPort"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/editTextIP"
                android:ems="10"
                android:text="2040"
                android:hint="端口"/>

        <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_udpConn"
                android:text="连接" />
        <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_udpClose"
                android:text="关闭" />

    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="消息列表："
            android:id="@+id/txt_Info"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="消息："/>
            <EditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_Send"
                    android:hint="请输入消息"/>
            <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_Send"
                    android:text="发送"/>

            <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_SendGps"
                    android:text="发送GPS"/>
        </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/positionView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/strGPS"/>



    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/robotView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_textview_robot_height"
                android:text="@string/strRobot"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="航向："/>
        <EditText
                android:layout_width="@dimen/activity_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/edit_setCourse"
                android:text="356.0"/>
        <EditText
                android:layout_width="@dimen/activity_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/edit_setCourseP"
                android:text="10.0"/>
        <EditText
                android:layout_width="@dimen/activity_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/edit_setCourseI"
                android:text="0.02"/>
        <EditText
                android:layout_width="@dimen/activity_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/edit_setCourseD"
                android:text="0.01"/>
        <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_SendSetCourse"
                android:text="开始"/>
        <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_SendStopCourse"
                android:text="结束"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="速度："/>

        <EditText
                android:layout_width="@dimen/activity_edittext_width"
                android:layout_height="wrap_content"
                android:id="@+id/edit_setMotorSpeed"
                android:text="650"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_SendSetMotorSpeed"
                android:text="设定速度"/>

    </LinearLayout>

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btnTurnClockwise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnForward"
                android:layout_toLeftOf="@+id/btnForward"
                android:text="@string/strTurnClockwise"/>

        <Button
                android:id="@+id/btnForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:text="@string/strForWard"/>

        <Button
                android:id="@+id/btnTurnAntiClockwise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnForward"
                android:layout_toRightOf="@+id/btnForward"
                android:text="@string/strTurnAntiClockwise"/>


        <Button
                android:id="@+id/btnTurnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnStop"
                android:layout_alignBottom="@+id/btnStop"
                android:layout_toLeftOf="@+id/btnStop"
                android:text="@string/strTurnLeft" />

        <Button
                android:id="@+id/btnTurnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnStop"
                android:layout_alignBottom="@+id/btnStop"
                android:layout_toRightOf="@+id/btnStop"
                android:text="@string/strTurnRight" />

        <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btnForward"
                android:layout_below="@+id/btnForward"
                android:text="@string/strStop"/>

        <Button
                android:id="@+id/btnBackward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btnStop"
                android:layout_below="@+id/btnStop"
                android:text="@string/strBackWard"/>

        <Button
                android:id="@+id/btnCalibrationDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnBackward"
                android:layout_toLeftOf="@+id/btnBackward"
                android:text="@string/strCalibrationDirection"/>

        <Button
                android:id="@+id/btnOtherCmd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnBackward"
                android:layout_toRightOf="@+id/btnForward"
                android:text="@string/strOtherCmd"/>

    </RelativeLayout>



</LinearLayout>
